# lead-generation-agent

./: .gitignore  .pre-commit-config.yaml  3_progress_updates.md  PROJECT_STRUCTURE.md  README.md  README_SQLITE_MEMORY.md  REQUIREMENTS.md  RULES.md  SETUP.md  UI_DESIGN.md  app.py  context.md  debug_calendar.py  main.py  pyproject.toml  requirements.in  requirements.txt  ruff.toml  run.sh
agents/: agent_core.py  email_qualifier.py  meeting_scheduler.py  models.py  reply_analyzer.py
code_updates/: 1_agent_refactoring_integration.md  2_agent_refactoring_migration.md
config/: config.yaml
context/: crm_context.py  email_parser.py
crm/: constants.py  load_data.py  mock_crm.json  write_data.py
data/: memory.db
docs/: config.md
examples/: agent_integration_demo.py
experiments/: run_qualification.py  run_qualify_followup.py  run_reply_intent.py  run_schedule_meeting.py
integrations/: README.md  email_manager.py  requirements.in  requirements.txt  slack_manager.py  zoho_manager.py
lib/: __init__.py  config_loader.py  constants.py  env_vars.py  generate_zoho_tokens.py
memory/: __init__.py  memory_manager.py  memory_store.py  summarizer.py
planning/: 10_slack_manager_integration_planning.md  11_zoho_lead_integration_planning.md  3_agent_models_migration.md  4_ui_qualification_results_planning.md  5_ui_reply_tab_planning.md  6_ui_meeting_tab_planning.md  7_discover_new_leads_planning.md  8_email_manager_integration_planning.md  9_google_api_integration_planning.md  FORMAT.md
progress_updates/: 10_duplicate_element_id_fixes.md  11_comprehensive_test_fixes.md  (+22 more)
(+52 files in other folders)
